; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-cgroup.c_blkiocg_file_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-cgroup.c_blkiocg_file_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgroup = type { i32 }
%struct.cftype = type { i32 }
%struct.seq_file = type { i32 }
%struct.blkio_cgroup = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cgroup*, %struct.cftype*, %struct.seq_file*)* @blkiocg_file_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @blkiocg_file_read(%struct.cgroup* %0, %struct.cftype* %1, %struct.seq_file* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cgroup*, align 8
  %6 = alloca %struct.cftype*, align 8
  %7 = alloca %struct.seq_file*, align 8
  %8 = alloca %struct.blkio_cgroup*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.cgroup* %0, %struct.cgroup** %5, align 8
  store %struct.cftype* %1, %struct.cftype** %6, align 8
  store %struct.seq_file* %2, %struct.seq_file** %7, align 8
  %11 = load %struct.cftype*, %struct.cftype** %6, align 8
  %12 = getelementptr inbounds %struct.cftype, %struct.cftype* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @BLKIOFILE_POLICY(i32 %13)
  store i32 %14, i32* %9, align 4
  %15 = load %struct.cftype*, %struct.cftype** %6, align 8
  %16 = getelementptr inbounds %struct.cftype, %struct.cftype* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @BLKIOFILE_ATTR(i32 %17)
  store i32 %18, i32* %10, align 4
  %19 = load %struct.cgroup*, %struct.cgroup** %5, align 8
  %20 = call %struct.blkio_cgroup* @cgroup_to_blkio_cgroup(%struct.cgroup* %19)
  store %struct.blkio_cgroup* %20, %struct.blkio_cgroup** %8, align 8
  %21 = load i32, i32* %9, align 4
  switch i32 %21, label %42 [
    i32 134, label %22
    i32 133, label %32
  ]

22:                                               ; preds = %3
  %23 = load i32, i32* %10, align 4
  switch i32 %23, label %29 [
    i32 132, label %24
  ]

24:                                               ; preds = %22
  %25 = load %struct.cftype*, %struct.cftype** %6, align 8
  %26 = load %struct.blkio_cgroup*, %struct.blkio_cgroup** %8, align 8
  %27 = load %struct.seq_file*, %struct.seq_file** %7, align 8
  %28 = call i32 @blkio_read_policy_node_files(%struct.cftype* %25, %struct.blkio_cgroup* %26, %struct.seq_file* %27)
  store i32 0, i32* %4, align 4
  br label %45

29:                                               ; preds = %22
  %30 = call i32 (...) @BUG()
  br label %31

31:                                               ; preds = %29
  br label %44

32:                                               ; preds = %3
  %33 = load i32, i32* %10, align 4
  switch i32 %33, label %39 [
    i32 131, label %34
    i32 129, label %34
    i32 130, label %34
    i32 128, label %34
  ]

34:                                               ; preds = %32, %32, %32, %32
  %35 = load %struct.cftype*, %struct.cftype** %6, align 8
  %36 = load %struct.blkio_cgroup*, %struct.blkio_cgroup** %8, align 8
  %37 = load %struct.seq_file*, %struct.seq_file** %7, align 8
  %38 = call i32 @blkio_read_policy_node_files(%struct.cftype* %35, %struct.blkio_cgroup* %36, %struct.seq_file* %37)
  store i32 0, i32* %4, align 4
  br label %45

39:                                               ; preds = %32
  %40 = call i32 (...) @BUG()
  br label %41

41:                                               ; preds = %39
  br label %44

42:                                               ; preds = %3
  %43 = call i32 (...) @BUG()
  br label %44

44:                                               ; preds = %42, %41, %31
  store i32 0, i32* %4, align 4
  br label %45

45:                                               ; preds = %44, %34, %24
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local i32 @BLKIOFILE_POLICY(i32) #1

declare dso_local i32 @BLKIOFILE_ATTR(i32) #1

declare dso_local %struct.blkio_cgroup* @cgroup_to_blkio_cgroup(%struct.cgroup*) #1

declare dso_local i32 @blkio_read_policy_node_files(%struct.cftype*, %struct.blkio_cgroup*, %struct.seq_file*) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
